tests/snapshots/identity/q17.snap
---
source: tests/explain_snapshots.rs
description: "-- 4-way star, comma-spelled, filters on two different dimensions\nSELECT c_name, p_name, l_quantity\nFROM part, orders, customer, lineitem\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND o_custkey = c_custkey\n  AND p_size < 10\n  AND c_mktsegment = 'FURNITURE'"
expression: rendered
---
Project [#2.1, #0.1, #3.3]
  Filter ((#3.1 = #0.0) AND (#3.0 = #1.0) AND (#1.1 = #2.0) AND (#0.3 < 10) AND (#2.3 = 'FURNITURE'))
    Join on=[]
      Join on=[]
        Join on=[]
          Scan #0
          Scan #1
        Scan #2
      Scan #3
