tests/snapshots/identity/q18.snap
---
source: tests/explain_snapshots.rs
description: "-- 5-way with a self-join through aliases (customers sharing a nation),\n-- in hostile textual order. The only corpus query where aliases matter.\nSELECT c1.c_name, c2.c_name, o1.o_orderkey\nFROM lineitem, orders AS o1, customer AS c1, customer AS c2, part\nWHERE o1.o_orderkey = l_orderkey\n  AND o1.o_custkey = c1.c_custkey\n  AND c1.c_nationkey = c2.c_nationkey\n  AND l_partkey = p_partkey\n  AND p_brand = 'Brand#55'\n  AND c2.c_acctbal < -900.0"
expression: rendered
---
Project [#2.1, #3.1, #1.0]
  Filter ((#1.0 = #0.0) AND (#1.1 = #2.0) AND (#2.2 = #3.2) AND (#0.1 = #4.0) AND (#4.2 = 'Brand#55') AND (#3.4 < -900.0))
    Join on=[]
      Join on=[]
        Join on=[]
          Join on=[]
            Scan #0
            Scan #1
          Scan #2
        Scan #3
      Scan #4
