tests/snapshots/identity/q25.snap
---
source: tests/explain_snapshots.rs
description: "-- kitchen sink: 5-way (orders twice via alias), selective filters,\n-- ORDER BY with unique tiebreak chain, LIMIT\nSELECT c_name, o1.o_orderdate, p_name, l_extendedprice\nFROM lineitem, orders AS o1, orders AS o2, customer, part\nWHERE l_orderkey = o1.o_orderkey\n  AND l_partkey = p_partkey\n  AND o1.o_custkey = c_custkey\n  AND o2.o_custkey = c_custkey\n  AND o2.o_totalprice > 90000.0\n  AND p_brand = 'Brand#12'\n  AND o1.o_orderdate > '1997-01-01'\nORDER BY l_extendedprice DESC, o1.o_orderkey, l_linenumber, o2.o_orderkey\nLIMIT 25"
expression: rendered
---
Project [#3.1, #1.4, #4.1, #0.4]
  Limit 25
    Sort [#0.4 DESC, #1.0 ASC, #0.2 ASC, #2.0 ASC]
      Filter ((#0.0 = #1.0) AND (#0.1 = #4.0) AND (#1.1 = #3.0) AND (#2.1 = #3.0) AND (#2.3 > 90000.0) AND (#4.2 = 'Brand#12') AND (#1.4 > '1997-01-01'))
        Join on=[]
          Join on=[]
            Join on=[]
              Join on=[]
                Scan #0
                Scan #1
              Scan #2
            Scan #3
          Scan #4
